# shop-management-fastapi

./: .gitignore  .python-version  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/auth/: auth_apis.py  auth_services.py  user_token.py
app/database/: database.py
app/models/: order.py  order_line.py  role.py  song.py  user.py
app/repos/: order_line_repos.py  order_repos.py  role_repos.py  user_repos.py
app/routes/: dashboard_apis.py  order_apis.py  role_apis.py  routes.py  song_apis.py  user_apis.py
app/schemas/: dashboard_schema.py  order_line_schema.py  order_schema.py  role_schema.py  user_schema.py
app/services/: dashboard_services.py  order_line_services.py  order_services.py  services.py  song_services.py  user_services.py
app/settings/: configs.py
app/utils/: constants.py  dependencies.py
migrations/: development.ini  env.py
migrations/versions/: 1744800000-initial_migration.py
tests/: test_main.py
